fix: delete redundant user update functionality; undo mistake with double @Router declarations; fix(critical): prevent users from deleting other user's accounts
